--- a/src/interfaces/views/registro.ejs
+++ b/src/interfaces/views/registro.ejs
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Usuario</title>
     <link rel="stylesheet" href="../../../css/login.css">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -38,8 +37,42 @@
     
                                         <form action="/registro_usuario" method="POST">
                                             <div class="form-group mb-3">
-                                                <label for="inputName">Nombre Completo</label>
-                                                <input type="text" class="form-control" id="inputName" name="name" required>
+                                                <label for="inputNombre1">Primer Nombre</label>
+                                                <input type="text" class="form-control" id="inputNombre1" name="nombre1" required>
+                                            </div>
+                                            <div class="form-group mb-3">
+                                                <label for="inputNombre2">Segundo Nombre</label>
+                                                <input type="text" class="form-control" id="inputNombre2" name="nombre2" required>
+                                            </div>
+                                            <div class="form-group mb-3">
+                                                <label for="inputApellido1">Primer Apellido</label>
+                                                <input type="text" class="form-control" id="inputApellido1" name="apellido1" required>
+                                            </div>
+                                            <div class="form-group mb-3">
+                                                <label for="inputApellido2">Segundo Apellido</label>
+                                                <input type="text" class="form-control" id="inputApellido2" name="apellido2" required>
+                                            </div>
+                                            <div class="form-group mb-3">
+                                                <label for="inputRut">RUT</label>
+                                                <input type="text" class="form-control" id="inputRut" name="rut" required
+                                                    pattern="^\d{7,8}-[0-9kK]{1}$" 
+                                                    title="El RUT debe tener el formato 19174477-2" oninput="formatRut(this)">
+                                            </div>
+                                            <div class="form-group mb-3">
+                                                <label for="inputNumeroDocumento">Número de Documento</label>
+                                                <input type="text" class="form-control" id="inputNumeroDocumento" name="numero_documento" required 
+                                                    pattern="^\d{3}\.\d{3}\.\d{3}$" 
+                                                    title="El número de documento debe tener el formato 123.123.123" oninput="formatDocumento(this)">
+                                            </div>
+                                            <div class="form-group mb-3">
+                                                <label for="inputTelefono">Teléfono</label>
+                                                <input type="tel" class="form-control" id="inputTelefono" name="telefono" required 
+                                                    pattern="^\+569\d{8}$" 
+                                                    title="El teléfono debe tener el formato +569XXXXXXXX" value="+569">
+                                            </div>
+                                            <div class="form-group mb-3">
+                                                <label for="inputFechaNacimiento">Fecha de Nacimiento</label>
+                                                <input type="date" class="form-control" id="inputFechaNacimiento" name="fecha_nacimiento" required>
                                             </div>
                                             <div class="form-group mb-3">
                                                 <label for="inputEmail">Correo Electrónico</label>
@@ -47,7 +80,9 @@
                                             </div>
                                             <div class="form-group mb-3">
                                                 <label for="inputPassword">Contraseña</label>
-                                                <input type="password" class="form-control" id="inputPassword" name="password" required>
+                                                <input type="password" class="form-control" id="inputPassword" name="password" required 
+                                                    pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" 
+                                                    title="La contraseña debe tener al menos 8 caracteres, con mayúsculas, minúsculas, números y un carácter especial">
                                             </div>
                                             <div class="form-group mb-4">
                                                 <label for="inputConfirmPassword">Confirmar Contraseña</label>
@@ -55,8 +90,7 @@
                                             </div>
                                             <button type="submit" class="btn-theme">Registrarse</button>
                                         </form>
-                                        
-                                        
+                                    
                                     </div>
                                 </div>
     
@@ -67,7 +101,7 @@
                                         <div class="account-testimonial">
                                             <h4 class="text-white mb-4">¡Bienvenido a la comunidad!</h4>
                                             <p class="lead text-white">"Únete a nuestra plataforma para gestionar y aprovechar todas las funcionalidades del ChatBot U Mayor."</p>
-                                            <p>- Admin User</p>
+                                            
                                         </div>
                                     </div>
                                 </div>
@@ -81,6 +115,35 @@
         </div>
     </section>
 
+    <script>
+        function formatRut(input) {
+            // Eliminar caracteres no deseados (puntos, espacios)
+            let rut = input.value.replace(/[^0-9kK-]/g, '');
+
+            // Validar si ya contiene el guion
+            if (rut.length >= 9) {
+                rut = rut.slice(0, 8) + '-' + rut.slice(8);
+            }
+
+            // Actualizar el valor del campo de entrada
+            input.value = rut;
+        }
+
+        function formatDocumento(input) {
+            // Eliminar caracteres no deseados (puntos, espacios)
+            let documento = input.value.replace(/[^0-9]/g, '');
+
+            // Formatear en el formato 123.456.789
+            if (documento.length >= 6) {
+                documento = documento.slice(0, 3) + '.' + documento.slice(3, 6) + '.' + documento.slice(6, 9);
+            } else if (documento.length >= 3) {
+                documento = documento.slice(0, 3) + '.' + documento.slice(3);
+            }
+
+            // Actualizar el valor del campo de entrada
+            input.value = documento;
+        }
+    </script>
 </body>
 
 </html>
