--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2449,7 +2449,7 @@ button:hover {
 body.login-page {
 	margin: 0;
 	font-family: 'Arial', sans-serif;
-	background: url('../images/BANCO.png')no-repeat center center fixed;
+	background: url('../images/registro.jpg')no-repeat center center fixed;
 	background-size: cover;
 	height: 100vh;
 }
@@ -2459,7 +2459,7 @@ body.login-page {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-	background: rgba(0, 0, 0, 0.5);
+	background: rgba(0, 0, 0, 0.068);
 	/* Fondo semitransparente */
 }
 
@@ -2641,7 +2641,7 @@ body {
 }
 
 body.login-page {
-	background: url('../images/BANCO.png') no-repeat center center fixed;
+	background: url('../images/registro.jpg') no-repeat center center fixed;
 	background-size: cover;
 }
 
