--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="row">
                     <div class="logo_section">
-                        <a class="navbar-brand" href="/"><img class= "img-fluid" src="images/logo.png" alt="image"></a>
+                        <a class="navbar-brand" href="/"><img  src="images/back/logo_raiz_financiera.webp" alt="image" style="max-width: 180px; height: auto;" ></a>
                     </div>
                     <div class="site_information">
                         <ul>
@@ -83,9 +83,7 @@
                                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                                     data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false"
                                     aria-label="Toggle navigation">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                    
                                 </button>
                                 <div class="collapse navbar-collapse justify-content-end" id="navbar-wd">
                                     <<ul class="navbar-nav">
@@ -168,10 +166,10 @@
 
     <!-- Start Banner -->
     <div class="ulockd-home-slider">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="pogoSlider" id="js-main-slider">
-                    <div class="pogoSlider-slide" style="background-image:url(images/back/back_2.jpg);">
+                    <div class="pogoSlider-slide" style="background-image:url(images/back/back_2.webp); max-width: 1920px; height: auto;  ">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -184,14 +182,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pogoSlider-slide" style="background-image:url(images/back/back_1.jpg);">
+                    <div class="pogoSlider-slide" style="background-image:url(images/back/back_1.webp); max-width: 1920px; height: auto;  ">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="slide_text white_fonts">
                                         <h3> Solidez, tradición<br><strong> crecimiento</strong></h3>
                                         <br>
-                                        <a class="start_exchange_bt" href="exchange.html">Intercambio de Moneda ></a>
+                                        <a class="start_exchange_bt " href="exchange.html">Intercambio de Moneda ></a>
                                     </div>
                                 </div>
                             </div>
@@ -265,7 +263,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <div class="full text_align_right_img">
-                        <img src="images/back/back_5.jpg" alt="Monedas" class="img-fluid">
+                        <img src="images/back/back_5.webp" alt="Monedas" class="img-fluid">
                     </div>
                 </div>
                 <div class="col-md-6 layout_padding">
@@ -298,7 +296,7 @@
 
 
     <div id="servicios" class="section layout_padding">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="full">
@@ -351,7 +349,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 text_align_right_img">
-                    <img src="images/back/back_6.jpg" alt="Solicitar Intercambio" class="img-fluid">
+                    <img src="images/back/back_6.webp" alt="Solicitar Intercambio" class="img-fluid">
                 </div>
                 <div class="col-md-6 layout_padding">
                     <div class="full paddding_left_15">
@@ -392,7 +390,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="full text_align_right_img">
-                        <img src="images/back/back_3.jpg" alt="#" class="img-fluid"/>
+                        <img src="images/back/back_3.webp" alt="#" class="img-fluid"/>
                     </div>
                 </div>
             </div>
@@ -403,7 +401,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 text_align_right_img">
-                    <img src="images/back/back_4.jpg" alt="Crédito Hipotecario" class="img-fluid">
+                    <img src="images/back/back_4.webp" alt="Crédito Hipotecario" class="img-fluid">
                 </div>
                 <div class="col-md-6 layout_padding">
                     <div class="full paddding_left_15">
@@ -490,7 +488,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="full">
-                                <img class="img-responsive" src="images/footer_logo.png" alt="#" />
+                                <img class="img-responsive" src="images/back/Logo_Cuadro.webp" alt="#" />
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-3">
