--- a/src/interfaces/views/perfil.ejs
+++ b/src/interfaces/views/perfil.ejs
@@ -6,9 +6,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Perfil de Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="#" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="#" />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- Pogo Slider CSS -->
+    <link rel="stylesheet" href="css/pogo-slider.min.css" />
+    <!-- Site CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css" />
+    <!-- Custom CSS -->
+
+    <link rel="stylesheet" href="css/chat.css" />
 </head>
 
 <body class="bg-light">
+
+    <!-- Start header -->
+    <header class="top-header">
+        <div class="header_top">
+            <div class="container">
+                <div class="row">
+                    <div class="logo_section">
+                        <a class="navbar-brand" href="/"><img  src="images/back/logo_raiz_financiera.webp" alt="image" style="max-width: 180px; height: auto;" ></a>
+                    </div>
+                    <div class="site_information">
+                        <ul>
+                            <li><a href="mailto:exchang@gmail.com"><img class="img-responsive" style="max-width: auto; max-height: auto;" src="images/mail_icon.png"
+                                        alt="#" /><br>RaizFinanciera@gmail.com</a></li>
+                            <li><a href="tel:exchang@gmail.com"><img src="images/phone_icon.png"
+                                        alt="#" /><br>+56978449038</a></li>
+                            <li>
+                                <% if (!token) { %>
+                                    <a class="join_bt" href="/login">Login</a>
+                                    <% } else { %>
+                                        <a class="join_bt" href="/logout">Cerrar Sesion</a>
+                                        <% } %>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="header_bottom">
+            <div class="container">
+                <div class="col-sm-12">
+                    <div class="menu_orange_section" style="background: #e6bc03;">
+                        <nav class="navbar header-nav navbar-expand-lg">
+                            <div class="menu_section">
+                                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                    data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false"
+                                    aria-label="Toggle navigation">
+                                    
+                                </button>
+                                <div class="collapse navbar-collapse justify-content-end" id="navbar-wd">
+                                    <<ul class="navbar-nav">
+                                        <li><a class="nav-link active" href="#nosotros">Nosotros</a></li>
+                                        <li><a class="nav-link" href="#intercambio">Intercambio</a></li>
+                                        <!-- Actualizar enlaces para anclar a las secciones -->
+                                        <li><a class="nav-link" href="#servicios">Servicios</a></li>
+
+                                        <% if (token) { %>
+                                            <li><a class="nav-link" href="/perfil">Perfil</a></li>
+                                            <% } %>
+
+                                        <% if (role === "admin") { %>                                                                               
+                                        <li><a class="nav-link" href="/tablas">Control Administrativo</a></li>
+                                        <% } %>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </nav>
+                        <div class="search-box">
+                            <input type="text" class="search-txt" placeholder="Buscar">
+                            <a class="search-btn">
+                                <img src="images/search_icon.png" alt="#" />
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </header>
 
     <div class="container py-5">
         <div class="row justify-content-center">
@@ -98,7 +184,67 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Start Footer -->
+    <footer class="footer-box">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 white_fonts">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-6 col-lg-3">
+                            <div class="full">
+                                <img class="img-responsive" src="images/back/Logo_Cuadro.webp" alt="#" />
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-3">
+                            <div class="full">
+                                <h3>Enlaces Rápidos</h3>
+                            </div>
+                            <div class="full">
+                                <ul class="menu_footer">
+                                    <li><a href="home.html">> Nosotros</a></li>
+                                    <li><a href="about.html">> Acerda de</a></li>
+                                    <li><a href="exchange.html">> Intercambio</a></li>
+                                    <li><a href="services.html">> Servicios</a></li>
+                                    <li><a href="new.html">> Proximamente</a></li>
+                                    <li><a href="contact.html">> Contacto</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-3">
+                            <div class="full">
+                                <div class="footer_blog full white_fonts">
+                                    <h3>Noticias</h3>
+                                    <p>No te pierdas ninguna novedad! Inscríbete con tu correo y recibe las últimas
+                                        noticias, productos y oportunidades de nuestro banco financiero.</p>
+                                    <div class="newsletter_form">
+                                        <form action="index.html">
+                                            <input type="email" placeholder="Ingresa Tu Correo" name="#" required="">
+                                            <button>Subir</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-3">
+                            <div class="full">
+                                <div class="footer_blog full white_fonts">
+                                    <h3>Contactanos</h3>
+                                    <ul class="full">
+                                        <li><img src="images/i5.png"><span> Avenida Central 1234<br>Santiago,
+                                                Chile</span></li>
+                                        <li><img src="images/i6.png"><span>RaizFinanciera@gmail.com</span></li>
+                                        <li><img src="images/i7.png"><span>+56978449038</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End Footer -->
+
 </body>
 
 </html>
