--- a/src/interfaces/views/tablas.ejs
+++ b/src/interfaces/views/tablas.ejs
@@ -7,6 +7,21 @@
   <title>Administración Raíz Financiera</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="Administracion.css">
+
+  <link rel="shortcut icon" href="#" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="#" />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- Pogo Slider CSS -->
+    <link rel="stylesheet" href="css/pogo-slider.min.css" />
+    <!-- Site CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css" />
+    <!-- Custom CSS -->
+
+    <link rel="stylesheet" href="css/chat.css" />
 </head>
 
 <body>
@@ -15,8 +30,11 @@
       <h1 class="h3">Raíz Financiera - <span class="badge bg-primary">Panel de Administración</span></h1>
 
 
-      <h3><a href="/Finanzas_Raiz"><span class="badge bg-success">Home</span></a> 
-        <a href="/logout"><span class="badge bg-danger">Salir</span></a></h3>
+      <h2>
+        <a href="/grupo"><span class="badge bg-primary">Grupo</span></a> 
+        <a href="/Finanzas_Raiz"><span class="badge bg-success">Home</span></a> 
+        <a href="/logout"><span class="badge bg-danger">Salir</span></a>
+      </h2>
     </div>
   </header>
 
@@ -346,10 +364,67 @@
       </div>
     </div>
   </main>
+   <!-- Start Footer -->
+    <footer class="footer-box">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 white_fonts">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-6 col-lg-3">
+                            <div class="full">
+                                <img class="img-responsive" src="images/back/Logo_Cuadro.webp" alt="#" />
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-3">
+                            <div class="full">
+                                <h3>Enlaces Rápidos</h3>
+                            </div>
+                            <div class="full">
+                                <ul class="menu_footer">
+                                    <li><a href="home.html">> Nosotros</a></li>
+                                    <li><a href="about.html">> Acerda de</a></li>
+                                    <li><a href="exchange.html">> Intercambio</a></li>
+                                    <li><a href="services.html">> Servicios</a></li>
+                                    <li><a href="new.html">> Proximamente</a></li>
+                                    <li><a href="contact.html">> Contacto</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-3">
+                            <div class="full">
+                                <div class="footer_blog full white_fonts">
+                                    <h3>Noticias</h3>
+                                    <p>No te pierdas ninguna novedad! Inscríbete con tu correo y recibe las últimas
+                                        noticias, productos y oportunidades de nuestro banco financiero.</p>
+                                    <div class="newsletter_form">
+                                        <form action="index.html">
+                                            <input type="email" placeholder="Ingresa Tu Correo" name="#" required="">
+                                            <button>Subir</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-3">
+                            <div class="full">
+                                <div class="footer_blog full white_fonts">
+                                    <h3>Contactanos</h3>
+                                    <ul class="full">
+                                        <li><img src="images/i5.png"><span> Avenida Central 1234<br>Santiago,
+                                                Chile</span></li>
+                                        <li><img src="images/i6.png"><span>RaizFinanciera@gmail.com</span></li>
+                                        <li><img src="images/i7.png"><span>+56978449038</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
 
-  <footer class="text-center text-muted py-3 bg-light">
-    <small>&copy; 2025 Raíz Financiera. Todos los derechos reservados.</small>
-  </footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
